--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@devs-studio/math",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Math functions",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/devsstudio/math#readme",
   "dependencies": {
     "@types/big.js": "^6.2.2",
-    "big.js": "^6.2.2",
-    "typescript": "^5.6.2"
+    "big.js": "^6.2.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.2"
   }
 }
